# simple_backup

./: LICENSE  Makefile  README.md  pyproject.toml
src/simple_backup/: app.py  handler.py
